# state_saver

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp  state_saver_exit_example.cpp  state_saver_fail_example.cpp  state_saver_succes_example.cpp  state_saver_success_example.cpp
include/: state_saver.hpp
test/: CMakeLists.txt  state_saver_exit_test.hpp  state_saver_fail_test.hpp  state_saver_succes_test.hpp  state_saver_success_test.hpp  test.cpp  test_case.hpp
